<resources>
    <string name="app_name">JBBank</string>

    <!-- Generic -->
    <string name="btn_sign_in">Sign In</string>
    <string name="hint_email">E-mail:</string>
    <string name="hint_password">Password:</string>
    <string name="hint_name">Name:</string>
    <string name="hint_phone">Phone:</string>
    <string name="text_format_value">R$ %1$s</string>
    <string name="text_name_empty">Enter your name.</string>
    <string name="text_email_empty">Enter your e-mail.</string>
    <string name="text_phone_empty">Enter your phone.</string>
    <string name="text_phone_invalid">Enter a valid phone number.</string>
    <string name="text_password_empty">Enter your password.</string>
    <string name="error_generic">There was an error, please try again later.</string>

    <!-- Screen Login Fragment -->
    <string name="login_txt_title">Welcome \n to JBBank</string>
    <string name="login_txt_sign_up">Don´t have an account? <b><font color="#03A9F4"> Sign Up</font></b></string>
    <string name="login_txt_forgot_password">Forgot Password?</string>

    <!-- Screen Register Fragment -->
    <string name="register_txt_title">Sign Up</string>
    <string name="btn_sign_up">Sign Up</string>

    <!-- Screen Recovery Fragment -->
    <string name="recovery_txt_title">Recovery \n Account</string>
    <string name="txt_link_email">Enter your email and we will send you a link to change your password.</string>
    <string name="btn_recovery">Recovery</string>

    <!-- Bottom Sheet -->
    <string name="text_title_bottom_sheet">Attention</string>
    <string name="text_button_bottom_sheet">I understand</string>

    <!-- Errors Firebase Authentication -->
    <string name="account_not_registered_register_fragment">No account found with this email.</string>
    <string name="invalid_email_register_fragment">Enter a valid email.</string>
    <string name="invalid_password_register_fragment">Invalid password, please try again.</string>
    <string name="email_in_use_register_fragment">This email is already in use.</string>
    <string name="strong_password_register_fragment">Enter a stronger password.</string>
    <string name="access_to_this_account_has_been_temporarily_disabled">Bloqueamos todas as solicitações deste dispositivo devido a atividades incomuns. Tente mais tarde.</string>

    <!-- Screen Home Fragment -->
    <string name="text_deposit_home">Depositar</string>
    <string name="text_refill_home">Recarga de celular</string>
    <string name="text_extract_home">Extrato</string>
    <string name="text_transfer_home">Transferir</string>
    <string name="text_profile_home">Perfil</string>
    <string name="text_my_balance_home">Meu saldo</string>
    <string name="text_activities_home">Últimas 6 atividades</string>
    <string name="text_view_full_home">Ver Todas</string>

    <!-- Screen Deposit Form Fragment -->
    <string name="text_inform_deposit">Informe a valor a ser depositado</string>
    <string name="text_deposit_value">Valor do deposito</string>
    <string name="text_deposit">Depositar</string>
    <string name="btn_confirm">CONFIRMAR</string>

    <!-- Screen Receipt Fragment -->
    <string name="text_title_receipt">Depósito efetuado \ncom sucesso!</string>
    <string name="text_sub_title_receipt">Seu deposito ficará disponível em até 3 dias úteis.</string>
    <string name="text_code_transaction_receipt">Código Transação</string>
    <string name="text_date_transaction_receipt">Data deposito</string>
    <string name="text_value_transaction_receipt">Valor deposito</string>
    <string name="btn_next_receipt">Continuar</string>
    <string name="text_title_toolbar_receipt">Recibo</string>
    <string name="text_message_empty">Digite um valor!</string>

    <!-- Screen Profile Fragment -->
    <string name="btn_save_profile">Save</string>
    <string name="edit_name_profile">Name:</string>
    <string name="edit_phone_profile">Phone:</string>
    <string name="text_title_toolbar_profile">Profile</string>
    <string name="text_profile_save_success">Profile save success!</string>

    <!-- Screen Recharge Fragment -->
    <string name="text_title_recharge">Recarga efetuada \ncom sucesso!</string>
    <string name="text_sub_title_recharge">Seu crédito estará disponível em alguns minutos.</string>
    <string name="text_code_transaction_recharge">Código Transação</string>
    <string name="text_date_transaction_recharge">Data Recarga</string>
    <string name="text_value_transaction_recharge">Valor Recarga</string>
    <string name="btn_next_recharge">Continuar</string>
    <string name="text_title_toolbar_recharge">Recarga</string>

    <!-- Screen Recharge Form Fragment -->
    <string name="text_inform_recharge_form">Valor da recarga</string>
    <string name="text_number_recharge_form">Insira o número</string>
    <string name="text_amount_empty">Digite um valor.</string>
    <string name="text_recharge">Recarga</string>

    <!-- Screen Profile User List Fragment -->
    <string name="text_title_users">Usuários</string>

    <!-- Screen Recharge Fragment -->
    <string name="text_inform_transfer_form">Digite o valor</string>
    <string name="text_transfer">Transferir</string>

</resources>